--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
+<link rel=stylesheet type="text/css" href="style.css" />
 <head>
   <title>Set</title>
 </head>
 
 <body>
   <h1>Play Set!</h1>
-</body>
+  <script src='set.js'></script>
 
-<script src='set.js'></script>
-<script src='set_tests.js'></script>
+</body>
+  <script src='set_tests.js'></script>
 </html>
