--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 
 <body>
   <h1>Play Set!</h1>
-  <script src='set.js'></script>
+  <script src='cards.js'></script>
+  <script src='gameplay.js'></script>
+  <script src='htmlHelpers.js'></script>
+  <script src='runGame.js'></script>
 
 </body>
   <script src='set_tests.js'></script>
