Fix AI and clearInterval problem

--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
   <script src='runGame.js'></script>
 
 </body>
-  <script src='set_tests.js'></script>
+  <!-- <script src='set_tests.js'></script> -->
 </html>
