Add AI, difficulty options

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
 </head>
 
 <body>
-  <h1>Play Set!</h1>
+<h1>Play Set!</h1>
+  <div class=buttondiv>
+    <button class="button" id='startgame' type='button'>Start a new SET game</button>
+    <input class="button difficulty" name="difficulty" id='easy' type='radio'>Easy</button>
+    <input class="button difficulty" name="difficulty" id='medium' type='radio'>Medium</button>
+    <input class="button difficulty" name="difficulty" id='hard' type='radio'>Hard</button>
+  </div>
+
   <script src='cards.js'></script>
   <script src='gameplay.js'></script>
   <script src='htmlHelpers.js'></script>
   <script src='runGame.js'></script>
-
 </body>
   <!-- <script src='set_tests.js'></script> -->
 </html>
