New SET calculation, html refactor
 - Card attributes are calculated as a sum of numbers, and then sums are compared to determine sets
 - Refactored html functionality
   - Got rid of global table object
   - General code cleanup and refactor

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <script src='cards.js'></script>
   <script src='gameplay.js'></script>
-  <script src='htmlHelpers.js'></script>
+  <script src='domManipulation.js'></script>
   <script src='runGame.js'></script>
 </body>
   <!-- <script src='set_tests.js'></script> -->
