--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
 
 <body>
 <h1>Play Set!</h1>
-  <div class=buttondiv>
+  <div class='buttondiv'>
     <button class="button" id='startgame' type='button'>Start a new SET game</button>
     <input class="button difficulty" name="difficulty" id='easy' type='radio'>Easy</button>
     <input class="button difficulty" name="difficulty" id='medium' type='radio'>Medium</button>
     <input class="button difficulty" name="difficulty" id='hard' type='radio'>Hard</button>
+  </div>
+
+  <div class='messages' id='messages'>
+    <p class='message'>You: 0</p>
+    <p class='message'>Computer: 0</p>
   </div>
 
   <script src='cards.js'></script>
