Update testing, fix minor bugs

--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@
   <script src='domManipulation.js'></script>
   <script src='runGame.js'></script>
 </body>
-  <!-- <script src='set_tests.js'></script> -->
+  <script src='set_tests.js'></script>
 </html>
